<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/button_style_themes"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stylesandthemes.StylesAndThemesActivity">

    <Button
        android:id="@+id/button_local_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#512121"
        android:text="@string/text_button_local_themes"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/button_styles_themes"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_styles_themes"
        app:layout_constraintTop_toBottomOf="@id/button_local_themes"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_themes"
        style="@style/button_style_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_themes"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/button_styles_themes"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:theme="@style/button_style_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_themes"
        tools:context=".stylesandthemes.StylesAndThemesActivity">

        <Button
            android:id="@+id/button_child_local_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_local_themes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <Button
            android:id="@+id/button_child_styles_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_styles_themes"
            app:layout_constraintTop_toBottomOf="@id/button_child_local_themes"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/button_child_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_themes"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/button_child_styles_themes"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>